classDiagram
    %% =============================================================
    %% Sistema de gestión de tareas — versión corregida
    %% Patrones: Strategy + Factory Method
    %% =============================================================

    %% ---------- ENUMS ----------
    class Estado {
        <<enumeration>>
        PENDIENTE
        EN_PROGRESO
        COMPLETADA
        CANCELADA
    }

    class Prioridad {
        <<enumeration>>
        ALTA
        MEDIA
        BAJA
    }

    %% ---------- INTERFACES ----------
    class Autenticable {
        <<interface>>
        +autenticar(email, password) boolean
    }

    class Colaborable {
        <<interface>>
        +estaCompartido() boolean
        +obtenerColaboradores() List~Usuario~
        +agregarColaborador(u Usuario) void
        +eliminarColaborador(u Usuario) void
    }

    class EstrategiaCreacion {
        <<interface>>
        +validarLimite(u Usuario) boolean
        +aplicarReglas(u Usuario) void
    }

    class CreacionLimitada {
        +validarLimite(u Usuario) boolean
        +aplicarReglas(u Usuario) void
    }

    class CreacionIlimitada {
        +validarLimite(u Usuario) boolean
        +aplicarReglas(u Usuario) void
    }

    %% ---------- USUARIO (Creator) ----------
    class Usuario {
        <<abstract>>
        #nombre String
        #email String
        #password String
        #contadorTareasActivas int
        #limiteTareas int
        #estrategiaCreacion EstrategiaCreacion
        #itemsCreados List~Elemento~
        #itemsCompartidos List~Elemento~
        +autenticar(email, password) boolean
        +crearElemento(titulo, descripcion)* Elemento
        +ejecutarCreacion(titulo, descripcion) void
        +setEstrategia(e EstrategiaCreacion) void
        +imprimirItemsCreados() void
        +imprimirItemsCompartidos() void
    }

    class UsuarioClasico {
        +crearElemento(titulo, descripcion) Tarea
    }

    class UsuarioPremium {
        -repertorioRecordatorios List~Recordatorio~
        +crearElemento(titulo, descripcion) Recordatorio
    }

    %% ---------- ELEMENTO (Product) ----------
    class Elemento {
        <<abstract>>
        #id int
        #titulo String
        #descripcion String
        #estado Estado
        #prioridad Prioridad
        #fechaCreacion LocalDateTime
        #colaboradores List~Usuario~
        +mostrarInfo()* void
        +cambiarEstado(e Estado) void
        +establecerPrioridad(p Prioridad) void
        +agregarColaborador(u Usuario) void
        +eliminarColaborador(u Usuario) void
        +obtenerColaboradores() List~Usuario~
        +estaCompartido() boolean
    }

    class Tarea {
        -fechaVencimiento LocalDateTime
        +mostrarInfo() void
        +getFechaVencimiento() LocalDateTime
        +setFechaVencimiento(f LocalDateTime) void
    }

    class Recordatorio {
        -fechaHora LocalDateTime
        -alertaActiva boolean
        +mostrarInfo() void
        +obtenerDatosFecha() String
        +modificarAlerta(activa boolean) void
        +getFechaHora() LocalDateTime
    }

    %% ---------- RELACIONES ----------
    Autenticable     <|.. Usuario
    Colaborable      <|.. Elemento
    EstrategiaCreacion <|.. CreacionLimitada
    EstrategiaCreacion <|.. CreacionIlimitada

    Usuario          <|-- UsuarioClasico
    Usuario          <|-- UsuarioPremium
    Elemento         <|-- Tarea
    Elemento         <|-- Recordatorio

    Usuario   "1" *-- "0..*" Elemento : itemsCreados
    Elemento  "0..*" o-- "0..*" Usuario : colaboradores
    Usuario   ..> EstrategiaCreacion : usa
    UsuarioClasico ..> Tarea         : crea
    UsuarioPremium ..> Recordatorio  : crea
    Elemento  ..> Estado
    Elemento  ..> Prioridad
